Bug 319678 - [PATCH] audio ripping fails if track 01 is not the first one to be ripped
Summary: [PATCH] audio ripping fails if track 01 is not the first one to be ripped
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michał Małek
URL:
Keywords:
: 258074 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-11 17:22 UTC by Andrea Bocci
Modified: 2014-09-29 22:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.3
Sentry Crash Report:


Attachments
Patch src/rip/k3baudioripjob.cpp to rip audio tracks in numerical order (2.27 KB, patch)
2013-05-11 17:24 UTC, Andrea Bocci
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Bocci 2013-05-11 17:22:23 UTC
Currently, K3B rips tracks in alphabetical order of the target file to be created.
This can easily be seen if the track number is not part of the file name (for example, I use just "Album Title/Track Author - Track Title"), and is confirmed reading the code in src/rip/k3baudioripjob.cpp .

On my CD reader, ripping the first track of the CD (track 01) fails if it is not the first track to be ripped. All other tracks can be ripped in any order without issues.

Reproducible: Always

Steps to Reproduce:
1. Set the ripped file names not to contain the track number. For example: "%A/(%y) %T/%A - !a='%A'{%a - }%t"
2. Start ripping a CD where the first track is not the first one in alphabetical order
Actual Results:  
K3B starts ripping tracks in alphabetical order.
When it reaches the first track on the CD, it stops and report a failure.

Expected Results:  
K3B starts ripping tracks in alphabetical order.
It should rip all tracks successfully.
Comment 1 Andrea Bocci 2013-05-11 17:24:48 UTC
Created attachment 79834 [details]
Patch src/rip/k3baudioripjob.cpp to rip audio tracks in numerical order

To work around this problem, I've patched src/rip/k3baudioripjob.cpp to make K3B rip tracks in numerical order.

This lets me rip whole CDs succesfully.
Comment 2 bmeadows666 2014-01-03 22:19:23 UTC
I'm seeing this problem with K3b under Debian multihome 7.2 64-bit on an AMD Phenom based PC. Symptoms exactly as described above - I'm ripping a LARGE CD collection to a new hard drive, and if 1) I'm ripping as multiple tracks (some of my stuff is transferred from vinyl) and 2) track 1 is not the first track, then K3b will crash as and when it gets to track 1. Absolutely reproducible. K3b version 2.0.2, I'm using XFCE v4.8 as my desktop though.
Comment 3 Johannes Obermayr 2014-09-28 01:23:21 UTC
Git commit d81f9c8970634140486499598e8795ad3419109d by Johannes Obermayr, on behalf of Andrea Bocci.
Committed on 11/05/2013 at 17:24.
Pushed by jobermayr into branch '2.0'.

Rip audio tracks in ascending numerical order.

K3B rips tracks in alphabetical target filename order, but ripping the first
track of a CD fails if it is not ripped first.
Workaround this problem by sorting ripping tracks in numerical order.

M  +36   -1    src/rip/k3baudioripjob.cpp

http://commits.kde.org/k3b/d81f9c8970634140486499598e8795ad3419109d
Comment 4 Albert Astals Cid 2014-09-29 22:39:34 UTC
*** Bug 258074 has been marked as a duplicate of this bug. ***