Rip audio tracks in ascending numerical order.

K3B rips tracks in alphabetical target filename order, but ripping the first
track of a CD fails if it is not ripped first.
Workaround this problem by sorting ripping tracks in numerical order.

BUG: 319678